crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__raw_byte_literal_1.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..8,
            value: BytesLiteral(
                ExprBytesLiteral {
                    node_index: NodeIndex(None),
                    range: 0..8,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..8,
                                node_index: NodeIndex(None),
                                value: [
                                    92,
                                    120,
                                    49,
                                    122,
                                ],
                                flags: BytesLiteralFlags {
                                    quote_style: Single,
                                    prefix: Raw {
                                        uppercase_r: false,
                                    },
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
