crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__raw_byte_literal_2.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..6,
            value: BytesLiteral(
                ExprBytesLiteral {
                    node_index: NodeIndex(None),
                    range: 0..6,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..6,
                                node_index: NodeIndex(None),
                                value: [
                                    92,
                                    92,
                                ],
                                flags: BytesLiteralFlags {
                                    quote_style: Single,
                                    prefix: Raw {
                                        uppercase_r: false,
                                    },
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
